syntax = "proto3";
package interactive.v1;
option go_package = "interactive;intrv1";

service InteractiveService {
  rpc IncrReadCnt(IncrReadCntRequest) returns (IncrReadCntResponse);
  rpc  Like(LikeRequest) returns (LikeResponse);
  rpc CancelLike(CancelLikeRequest) returns (CancelLikeResponse);
  rpc Favorite(FavoriteRequest) returns (FavoriteResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc GetByIds(GetByIdsRequest) returns (GetByIdsResponse);
}

message IncrReadCntRequest {
  string biz = 1;
  int64 biz_id = 2;
}

message IncrReadCntResponse {

}

message LikeRequest {
  string biz = 1;
  int64 biz_id = 2;
  int64 uid = 3;
}

message LikeResponse {

}

message CancelLikeRequest {
  string biz = 1;
  int64 biz_id = 2;
  int64 uid = 3;
}

message CancelLikeResponse {

}

message FavoriteRequest {
  string biz = 1;
  int64 biz_id = 2;
  int64 uid = 3;
  int64 fid = 4;
}

message FavoriteResponse {

}

message GetRequest {
  string biz = 1;
  int64 biz_id = 2;
  int64 uid = 3;
}

message GetResponse {
  Interactive interactive = 1;
}

message Interactive {
  string biz = 1;
  int64 biz_id = 2;
  int64 read_cnt = 3;
  int64 like_cnt = 4;
  int64 favorite_cnt = 5;
  bool liked = 6;
  bool favorited = 7;
}

message GetByIdsRequest {
  string biz = 1;
  repeated int64 biz_ids = 2;
}

message GetByIdsResponse {
  map<int64, Interactive> interactives = 1;
}